--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: bolt.diy Docs
+site_name: d3ploy Docs
 site_dir: ../site
 theme:
   name: material
@@ -31,7 +31,7 @@ theme:
     repo: fontawesome/brands/github
   # logo: assets/logo.png
   # favicon: assets/logo.png
-repo_name: bolt.diy
+repo_name: d3ploy
 repo_url: https://github.com/stackblitz-labs/bolt.diy
 edit_uri: ''
 
@@ -40,16 +40,16 @@ extra:
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/stackblitz-labs/bolt.diy
-      name: bolt.diy
+      name: d3ploy
     - icon: fontawesome/brands/discourse
       link: https://thinktank.ottomator.ai/
-      name: bolt.diy Discourse
+      name: d3ploy Discourse
     - icon: fontawesome/brands/x-twitter
       link: https://x.com/bolt_diy
-      name: bolt.diy on X
+      name: d3ploy on X
     - icon: fontawesome/brands/bluesky
       link: https://bsky.app/profile/bolt.diy
-      name: bolt.diy on Bluesky
+      name: d3ploy on Bluesky
 
 markdown_extensions:
   - pymdownx.highlight:
