--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "version": "1.0.0",
   "author": {
-    "name": "d3ploy team",
+    "name": "D3ploy Team",
     "email": "team@d3ploy.app"
   },
   "scripts": {
